Fixed issue with ACE editor not showing up

--- a/src/main/webapp/App.css
+++ b/src/main/webapp/App.css
@@ -341,10 +341,6 @@ html {
 	height: 100%;
 }
 
-.ace_editor {
-	position: relative !important;
-}
-
 .RightAlignedActionButtons {
 	width: 100%;
 }
